# canvas-nft-server

./: Cargo.toml  Dockerfile  Makefile  README.md  database.yml  samconfig.toml  template.yml
api/: Cargo.toml
api/src/: graph.rs  main.rs
api/src/graph/: enums.rs  inputs.rs  mutation.rs  outputs.rs  query.rs
api/src/graph/outputs/: asset.rs  nft.rs  user.rs  work.rs
app/: Cargo.toml  build.rs
app/src/: application.rs  aws.rs  csv_loader.rs  dataloader.rs  ddb.rs  domain.rs  ethereum.rs  internal_api.rs  lib.rs  open_sea.rs
app/src/application/: admin.rs  nft.rs
app/src/application/admin/: nft.rs  user.rs  work.rs
app/src/application/service/: user.rs  work.rs
app/src/aws/: cognite.rs  cognito.rs  lambda.rs  s3.rs  ses.rs  sns.rs
app/src/dataloader/: asset1155_by_work.rs  asset721_by_work.rs  nft_by_work.rs  thumbnail_by_work.rs
app/src/ddb/: asset.rs  asset1155.rs  asset721.rs  nft.rs  thumbnail.rs  user.rs  work.rs
app/src/domain/: asset.rs  nft.rs  user.rs  work.rs
app/src/ethereum/: api.rs  canvas.abi.json  canvas_erc1155.abi.json  canvas_erc721.abi.json  erc1155.rs  erc721.rs  unit.rs  wallet.rs
app/src/internal_api/: api.rs
app/src/open_sea/: api.rs  metadata.rs
batch/: Cargo.toml
batch/src/: main.rs
ethereum/: Makefile  package-lock.json  package.json  truffle-config.js
ethereum/contracts/: Canvas1155.sol  Canvas721.sol
ethereum/migrations/: 2_deploy.js
ethereum/test/: canvas.js
subscriber/: Cargo.toml
subscriber/src/: main.rs
