[package]
name = "batch"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "batch"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
app = {path = "../app" }
lambda_runtime = "0.4.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.64"
tokio = { version = "1", features = ["full"] }
simple-error = "0.2"
